tests/specs/ecosystem/poolifier/poolifier_web_worker/0_3_14.test
poolifier/poolifier-web-worker/0.3.14
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2304 [ERROR]: Cannot find name 'WorkerGlobalScope'.
 */ export abstract class AbstractWorker<MainWorker extends WorkerGlobalScope & typeof globalThis, Data = unknown, Response = unknown> {
                                                            ~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/worker/abstract-worker.ts:11:61

TS2304 [ERROR]: Cannot find name 'WorkerGlobalScope'.
 */ export class ThreadWorker<Data = unknown, Response = unknown> extends AbstractWorker<WorkerGlobalScope & typeof globalThis, Data, Response> {
                                                                                         ~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/worker/thread-worker.ts:18:90

Found 2 errors.

